Updated BTPR makefile for PennMUSH port.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1031 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/btpr/Makefile.in
+++ b/btech/btpr/Makefile.in
@@ -45,10 +45,10 @@ CONFIG_HEADER = $(top_builddir)/autoconf.h
 CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libbtpr_la_LIBADD =
-am_libbtpr_la_OBJECTS = event.lo mux_tree.lo tree.lo comsys.lo conf.lo \
-	db.lo dllist.lo eval.lo game.lo flags.lo functions.lo log.lo \
-	move.lo netcommon.lo player.lo powers.lo pqueue.lo \
-	predicates.lo rbtab.lo rbtree.lo stringutil.lo wild.lo
+am_libbtpr_la_OBJECTS = event.lo comsys.lo conf.lo db.lo dllist.lo \
+	eval.lo game.lo flags.lo functions.lo log.lo move.lo \
+	netcommon.lo player.lo powers.lo pqueue.lo predicates.lo \
+	rbtab.lo rbtree.lo stringutil.lo wild.lo
 libbtpr_la_OBJECTS = $(am_libbtpr_la_OBJECTS)
 am_pqtest_OBJECTS = pqtest.$(OBJEXT)
 pqtest_OBJECTS = $(am_pqtest_OBJECTS)
@@ -179,17 +179,17 @@ top_srcdir = @top_srcdir@
 @BTPR_PENN_TRUE@MAYBE_PENN = -I$(srcdir)/penn/include
 AM_CPPFLAGS = $(MAYBE_PENN) -I$(srcdir)/include
 noinst_LTLIBRARIES = libbtpr.la
-libbtpr_la_SOURCES = event.c mux_tree.c tree.c \
+libbtpr_la_SOURCES = event.c \
 	comsys.c conf.c db.c dllist.c eval.c game.c flags.c functions.c log.c \
 	move.c netcommon.c player.c powers.c pqueue.c predicates.c rbtab.c \
 	rbtree.c stringutil.c wild.c \
-	pqueue.h vixie.h include/alloc.h include/ansi.h include/attrs.h \
+	pqueue.h include/alloc.h include/ansi.h include/attrs.h \
 	include/copyright.h include/db.h include/config.h include/create.h \
 	include/dllist.h include/externs.h include/flags.h include/htab.h \
-	include/p.mux_tree.h include/debug.h include/mudconf.h \
-	include/muxevent.h include/mux_tree.h include/powers.h \
+	include/debug.h include/mudconf.h \
+	include/muxevent.h include/powers.h \
 	include/p.event.h include/p.functions.h include/rbtree.h \
-	include/tree.h include/interface.h \
+	include/interface.h \
 	penn/btpr_alloc.h penn/btpr_db.h penn/btpr_interface.h \
 	penn/btpr_mudconf.h
 
@@ -267,7 +267,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/game.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/log.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/move.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mux_tree.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/netcommon.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/player.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/powers.Plo@am__quote@
@@ -277,7 +276,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rbtab.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rbtree.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stringutil.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tree.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wild.Plo@am__quote@
 
 .c.o:
