Implemented bit-level I/O on FI_OctetStream objects.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1039 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/btfi/Makefile.am
+++ b/btech/btfi/Makefile.am
@@ -1,8 +1,10 @@
 noinst_LTLIBRARIES = libbtfi.la
 
 libbtfi_la_SOURCES = sax.cc sax.h \
-	Document.cc vocab.cc encalg.c stream.c common.c \
-	Document.hh vocab.hh encalg.h stream.h common.h
+	Document.cc Element.cc Attributes.cc \
+	Document.hh Element.hh Attributes.hh \
+	vocab.cc encalg.c stream.c common.c \
+	vocab.hh encalg.h stream.h common.h
 
 check_PROGRAMS = saxtest vocabtest
 
