--- a/btech/btfi/Makefile.in
+++ b/btech/btfi/Makefile.in
@@ -46,7 +46,7 @@ CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libbtfi_la_LIBADD =
 am_libbtfi_la_OBJECTS = sax.lo Document.lo Element.lo Attributes.lo \
-	vocab.lo encalg.lo stream.lo common.lo
+	vocab.lo encalg.lo encutil.lo stream.lo common.lo
 libbtfi_la_OBJECTS = $(am_libbtfi_la_OBJECTS)
 am_saxtest_OBJECTS = dummy.$(OBJEXT) saxtest.$(OBJEXT)
 saxtest_OBJECTS = $(am_saxtest_OBJECTS)
@@ -192,8 +192,8 @@ noinst_LTLIBRARIES = libbtfi.la
 libbtfi_la_SOURCES = sax.cc sax.h \
 	Document.cc Element.cc Attributes.cc \
 	Document.hh Element.hh Attributes.hh \
-	vocab.cc encalg.c stream.c common.c \
-	vocab.hh encalg.h stream.h common.h
+	vocab.cc encalg.c encutil.cc stream.c common.c \
+	vocab.hh encalg.h encutil.hh stream.h common.h
 
 saxtest_SOURCES = tests/dummy.cc tests/saxtest.c
 saxtest_LDADD = libbtfi.la
@@ -269,6 +269,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/common.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dummy.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/encalg.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/encutil.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sax.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/saxtest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stream.Plo@am__quote@
