--- a/btech/btfi/Makefile.am
+++ b/btech/btfi/Makefile.am
@@ -3,6 +3,8 @@ noinst_LTLIBRARIES = libbtfi.la
 libbtfi_la_SOURCES = sax.cc sax.h \
 	Document.cc Element.cc Attributes.cc MutableAttributes.cc \
 	Document.hh Element.hh Attributes.hh MutableAttributes.hh \
+	Name.cc Value.cc generic.cc \
+	Name.hh Value.hh generic.h \
 	vocab.cc encalg.c encutil.cc stream.c common.c \
 	vocab.hh encalg.h encutil.hh stream.h common.h
 
