Added some pretty debugging output for the Fast Infoset Element serializer.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1044 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/btfi/Makefile.am
+++ b/btech/btfi/Makefile.am
@@ -1,8 +1,8 @@
 noinst_LTLIBRARIES = libbtfi.la
 
 libbtfi_la_SOURCES = sax.cc sax.h \
-	Document.cc Element.cc Attributes.cc MutableAttributes.cc \
-	Document.hh Element.hh Attributes.hh MutableAttributes.hh \
+	Document.cc Element.cc MutableAttributes.cc \
+	Document.hh Element.hh MutableAttributes.hh Attributes.hh \
 	Name.cc Value.cc generic.cc \
 	Name.hh Value.hh generic.h \
 	vocab.cc encalg.c encutil.cc stream.c common.c \
