--- a/btech/btfi/Makefile.am
+++ b/btech/btfi/Makefile.am
@@ -1,12 +1,12 @@
 noinst_LTLIBRARIES = libbtfi.la
 
 libbtfi_la_SOURCES = sax.cc sax.h \
-	Document.cc Element.cc MutableAttributes.cc \
-	Document.hh Element.hh MutableAttributes.hh Attributes.hh \
-	Name.cc Value.cc generic.cc \
-	Name.hh Value.hh generic.h \
+	Document.cc Element.cc \
+	Document.hh Element.hh Attributes.hh \
+	Name.cc         Value.cc          MutableAttributes.cc \
+	Name.hh names.h Value.hh values.h MutableAttributes.hh attribs.h \
 	vocab.cc encalg.c encutil.cc stream.c common.c \
-	vocab.hh encalg.h encutil.hh stream.h common.h
+	vocab.hh encalg.h encutil.hh stream.h common.h Exception.hh
 
 check_PROGRAMS = saxtest vocabtest
 
