--- a/btech/btfi/Makefile.in
+++ b/btech/btfi/Makefile.in
@@ -45,9 +45,9 @@ CONFIG_HEADER = $(top_builddir)/autoconf.h
 CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libbtfi_la_LIBADD =
-am_libbtfi_la_OBJECTS = sax.lo Document.lo Element.lo Name.lo Value.lo \
-	MutableAttributes.lo vocab.lo encalg.lo encutil.lo stream.lo \
-	common.lo
+am_libbtfi_la_OBJECTS = sax.lo encutil.lo Document.lo Element.lo \
+	Name.lo Value.lo MutableAttributes.lo Vocabulary.lo encalg.lo \
+	stream.lo common.lo
 libbtfi_la_OBJECTS = $(am_libbtfi_la_OBJECTS)
 am_saxtest_OBJECTS = dummy.$(OBJEXT) saxtest.$(OBJEXT)
 saxtest_OBJECTS = $(am_saxtest_OBJECTS)
@@ -190,13 +190,13 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 noinst_LTLIBRARIES = libbtfi.la
-libbtfi_la_SOURCES = sax.cc sax.h \
-	Document.cc Element.cc \
-	Document.hh Element.hh Attributes.hh \
+libbtfi_la_SOURCES = \
+	sax.cc encutil.cc Document.cc Element.cc \
+	sax.h  encutil.hh Document.hh Element.hh Attributes.hh \
 	Name.cc         Value.cc          MutableAttributes.cc \
 	Name.hh names.h Value.hh values.h MutableAttributes.hh attribs.h \
-	vocab.cc encalg.c encutil.cc stream.c common.c \
-	vocab.hh encalg.h encutil.hh stream.h common.h Exception.hh
+	Vocabulary.cc                            encalg.c stream.c common.c \
+	Vocabulary.hh VocabTable.hh Exception.hh encalg.h stream.h common.h
 
 saxtest_SOURCES = tests/dummy.cc tests/saxtest.c
 saxtest_LDADD = libbtfi.la
@@ -271,6 +271,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/MutableAttributes.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Name.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Value.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Vocabulary.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/common.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dummy.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/encalg.Plo@am__quote@
@@ -278,7 +279,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sax.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/saxtest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stream.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vocab.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vocabtest.Po@am__quote@
 
 .c.o:
